# visualize-sandbox

./: Makefile  README.md  setup.cfg  setup.py
examples/00pokemon/: .gitignore  00.ipynb  00note.py  Makefile  all.py  readme.md  requirements.txt
examples/01takapy0210/: .gitignore  Makefile  all.ipynb  all.py  readme.md  requirements.txt
examples/02takubb/: Makefile  all.ipynb  all.py  readme.md  requirements.txt
examples/tools/: topycode.py
